--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+
+
 Dependencies
 ============
 
@@ -12,6 +14,7 @@ Python packages
 * Biopython
 * pymongo
 * mirnylib (https://bitbucket.org/mirnylab/mirnylib)
+* networkx
 
 Other software
 --------------
